Fix SpinWin button infinite moving down on mobile

--- a/src/exported_games/SpinWinGame/SpinWinGame.css
+++ b/src/exported_games/SpinWinGame/SpinWinGame.css
@@ -35,11 +35,14 @@
 }
 
 .sw-wrapper {
-  transform-origin: top center;
+  width: 100%;
+  max-width: 480px;
+  height: 100%;
 }
 
 .sw-container {
-  width: 480px;
+  width: 100%;
+  height: 100%;
   background: rgba(15, 16, 22, 0.6);
   backdrop-filter: blur(20px);
   position: relative;
